# drawing3d

./: .gitignore  Makefile  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
drawing3d/: __init__.py  build_ffi.py  camera.py  constants.py  drawlist.py  eventlist.py  helpers.py  simple3d.py  window.py
examples/: example.c  example.py  simple.py
include/: camera.h  cffi_header.h  draw.h  drawing3d.h  drawlist.h  eventlist.h  keymapping.h  window.h
src/: camera.c  draw.c  draw_priv.h  drawlist.c  eventlist.c  window.c
